added functionality to exclude multiple cand mention sentences from analysis

--- a/code/naive_sent_analysis.ipynb
+++ b/code/naive_sent_analysis.ipynb
@@ -20,12 +20,109 @@
     "from afinn import Afinn\n",
     "import numpy as np\n",
     "import networkx as nx\n",
-    "from tabulate import tabulate\n"
+    "from tabulate import tabulate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from re import search\n",
+    "import s1_analysis\n",
+    "import collections\n",
+    "s1 = s1_analysis.s1_analysis()\n",
+    "s1.train_load(\"s1_model_2.sav\")\n",
+    "pubs = []\n",
+    "names_list = [\"Biden\", \"Bernie\", \"Warren\", \"Kamala\"]\n",
+    "\n",
+    "\n",
+    "# read in data and sentence tokenize it\n",
+    "df = pd.read_csv('vikas.csv')\n",
+    "df['tokenized_sents'] = df.apply(\n",
+    "    lambda row: nltk.sent_tokenize(row['full_art']), axis=1)\n",
+    "\n",
+    "\n",
+    "# split df into dictionary with keys representing publisher and values representing df for those publishers\n",
+    "sources = {}\n",
+    "for source, df_source in df.groupby('source'):\n",
+    "    sources[source] = df_source\n",
+    "\n",
+    "# grabs all sentences which mention candidate\n",
+    "\n",
+    "\n",
+    "def get_candidate_mentions(candidate_name, publisher, tokenize_level):\n",
+    "    mentions = []\n",
+    "    substring = candidate_name\n",
+    "    for article in sources[publisher][tokenize_level]:\n",
+    "        for sentence in article:\n",
+    "            if search(substring, sentence):\n",
+    "                mentions.append(sentence)\n",
+    "            else:\n",
+    "                continue\n",
+    "    return(mentions)\n",
+    "\n",
+    "\n",
+    "def get_sentiment_scores(names_list, publisher, tokenize_level, no_duplicates=None):\n",
+    "   # will store cand name and sentiment scores\n",
+    "    cand_sent = {}\n",
+    "\n",
+    "    # build cand mention lists\n",
+    "    joe_biden_mentions = get_candidate_mentions(\n",
+    "        \"Biden|Joe Biden\", publisher, tokenize_level)\n",
+    "    bernie_mentions = get_candidate_mentions(\n",
+    "        \"Bernie|Sanders\", publisher, tokenize_level)\n",
+    "    Warren_mentions = get_candidate_mentions(\n",
+    "        \"Warren|Elizabeth Warren\", publisher, tokenize_level)\n",
+    "    Kamala_mentions = get_candidate_mentions(\n",
+    "        \"Kamala|Harris\", publisher, tokenize_level)\n",
+    "\n",
+    "    # build lists for sentiment scoring loop\n",
+    "    cand_list = [joe_biden_mentions, bernie_mentions,\n",
+    "                 Warren_mentions, Kamala_mentions]\n",
+    "\n",
+    "    # If we want to eliminate sentences with multiple candididate mentions, we call fucntion\n",
+    "    # with no_duplicates=1 and this block executes\n",
+    "\n",
+    "    if no_duplicates == 1:\n",
+    "\n",
+    "        # shared_sent will grab any shared sentences\n",
+    "        shared_sent = []\n",
+    "        for x in joe_biden_mentions:\n",
+    "            if search(\"Bernie|Sanders|Warren|Elizabeth Warren|Kamala|Harris\", x):\n",
+    "                shared_sent.append(x)\n",
+    "        for x in bernie_mentions:\n",
+    "            if search(\"Joe|Joe Biden|Warren|Elizabeth Warren|Kamala|Harris\", x):\n",
+    "                shared_sent.append(x)\n",
+    "        for x in Warren_mentions:\n",
+    "            if search(\"Joe|Joe Biden|Bernie|Sanders|Kamala|Harris\", x):\n",
+    "                shared_sent.append(x)\n",
+    "        for x in Kamala_mentions:\n",
+    "            if search(\"Joe|Joe Biden|Bernie|Sanders|Warren|Elizabeth Warren\", x):\n",
+    "                shared_sent.append(x)\n",
+    "\n",
+    "        # use shared sent list to remove shared sent from each candidates sentence list\n",
+    "        for cand in cand_list:\n",
+    "            for sent in cand:\n",
+    "                if sent in shared_sent:\n",
+    "                    cand.remove(sent)\n",
+    "\n",
+    "    # run sentiment score on each candidate and get count/store in returned dictionary\n",
+    "    for i, candidate in enumerate(cand_list):\n",
+    "        features = []\n",
+    "        results = []\n",
+    "        features = [s1.find_features(x) for x in candidate]\n",
+    "        results = [s1.classifier.classify(x) for x in features]\n",
+    "        counter = collections.Counter(results)\n",
+    "        cand_sent[names_list[i]] = counter\n",
+    "    ##print(cand_sent)\n",
+    "    return(cand_sent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,137 +153,83 @@
     }
    ],
    "source": [
-    "import s1_analysis\n",
-    "import collections\n",
-    "s1 = s1_analysis.s1_analysis()\n",
-    "s1.train_load(\"s1_model_2.sav\")\n",
-    "from re import search\n",
-    "pubs=[]\n",
-    "names_list=[\"Biden\",\"Bernie\",\"Warren\",\"Kamala\"]\n",
-    "## read in data\n",
-    "df=pd.read_csv('vikas.csv')\n",
-    "df['tokenized_sents'] = df.apply(lambda row: nltk.sent_tokenize(row['full_art']), axis=1)\n",
-    "\n",
-    "## split soruces into dictionary keys based on their values\n",
-    "sources={}\n",
-    "for source, df_source in df.groupby('source'):\n",
-    "    sources[source]=df_source\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "## grabs all snetences which mention candidate\n",
-    "def get_candidate_mentions(candidate_name,publisher):\n",
-    "    mentions=[]\n",
-    "    substring=candidate_name\n",
-    "    for article in sources[publisher]['tokenized_sents']:\n",
-    "        for sentence in article:\n",
-    "            if search(substring, sentence):\n",
-    "                mentions.append(sentence)\n",
-    "            else:\n",
-    "                continue\n",
-    "   # print(len(mentions))\n",
-    "    return(mentions)\n",
-    "\n",
-    "## calls functiom that builds candidate df's and runs sentiment over those df returning ratio of pos:neg\n",
-    "def get_sentiment_scores(names_list,publisher):\n",
-    "    ## build df's\n",
-    "    cand_sent={}\n",
-    "    joe_biden_mentions=get_candidate_mentions(\"Biden|Joe Biden\",publisher)\n",
-    "    bernie_mentions=get_candidate_mentions(\"Bernie|Sanders\",publisher)\n",
-    "    Warren_mentions=get_candidate_mentions(\"Warren|Elizabeth Warren\",publisher)\n",
-    "    Kamala_mentions=get_candidate_mentions(\"Kamala|Harris\",publisher)\n",
-    "    #print(len(joe_biden_mentions))\n",
-    "    ## build lists for sentiment scoring loop\n",
-    "    cand_list=[joe_biden_mentions,bernie_mentions,Warren_mentions,Kamala_mentions]\n",
-    "\n",
-    "    ## run sentiment score on each candidate and get count store in dictionary\n",
-    "    for i,candidate in enumerate(cand_list):\n",
-    "        features=[]\n",
-    "        results=[]\n",
-    "        features = [s1.find_features(x) for x in candidate]\n",
-    "        results = [s1.classifier.classify(x) for x in features ]\n",
-    "        counter=collections.Counter(results)\n",
-    "        cand_sent[names_list[i]]=counter\n",
-    "    print(cand_sent)\n",
-    "    return(cand_sent)\n",
-    "\n",
-    "\n",
-    "\n",
-    "## run over all publications\n",
-    "## empty dict to store all results\n",
-    "all_publishers={}\n",
-    "pubnames=[x for x in sources.keys()]\n",
-    "for i,publisher in enumerate(pubnames):\n",
+    "# will return a dictionary that as a key gives candidate name and as a value\n",
+    "# gives another dictionary with candidates name as key and sentiment scores as values\n",
+    "all_publishers = {}\n",
+    "pubnames = [x for x in sources.keys()]\n",
+    "for i, publisher in enumerate(pubnames):\n",
     "   # pubs.append(get_sentiment_scores(names_list,publisher))\n",
-    "    scores=get_sentiment_scores(names_list,publisher)\n",
+    "    scores = get_sentiment_scores(names_list, publisher, 'tokenized_sents')\n",
     "    print(scores)\n",
-    "    all_publishers[publisher]=scores"
+    "    all_publishers[publisher] = scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'Bloomberg': {'Biden': Counter(),\n",
-       "  'Bernie': Counter(),\n",
-       "  'Warren': Counter(),\n",
-       "  'Kamala': Counter()},\n",
-       " 'Breitbart News': {'Biden': Counter({'neg': 546, 'pos': 541}),\n",
-       "  'Bernie': Counter({'neg': 176, 'pos': 142}),\n",
-       "  'Warren': Counter({'neg': 163, 'pos': 165}),\n",
-       "  'Kamala': Counter({'pos': 81, 'neg': 80})},\n",
-       " 'CNN': {'Biden': Counter({'pos': 509, 'neg': 579}),\n",
-       "  'Bernie': Counter({'neg': 208, 'pos': 180}),\n",
-       "  'Warren': Counter({'pos': 300, 'neg': 318}),\n",
-       "  'Kamala': Counter({'neg': 99, 'pos': 78})},\n",
-       " 'Fox News': {'Biden': Counter({'neg': 836, 'pos': 894}),\n",
-       "  'Bernie': Counter({'pos': 165, 'neg': 163}),\n",
-       "  'Warren': Counter({'pos': 292, 'neg': 308}),\n",
-       "  'Kamala': Counter({'neg': 135, 'pos': 122})},\n",
-       " 'Google News': {'Biden': Counter({'pos': 8, 'neg': 16}),\n",
-       "  'Bernie': Counter({'neg': 24, 'pos': 17}),\n",
-       "  'Warren': Counter({'neg': 31, 'pos': 17}),\n",
-       "  'Kamala': Counter({'neg': 4, 'pos': 4})},\n",
-       " 'MSNBC': {'Biden': Counter({'pos': 99, 'neg': 93}),\n",
-       "  'Bernie': Counter({'pos': 27, 'neg': 31}),\n",
-       "  'Warren': Counter({'neg': 31, 'pos': 22}),\n",
-       "  'Kamala': Counter({'pos': 11, 'neg': 7})},\n",
-       " 'New York Magazine': {'Biden': Counter({'neg': 296, 'pos': 281}),\n",
-       "  'Bernie': Counter({'neg': 167, 'pos': 174}),\n",
-       "  'Warren': Counter({'neg': 202, 'pos': 217}),\n",
-       "  'Kamala': Counter({'neg': 52, 'pos': 42})},\n",
-       " 'The New York Times': {'Biden': Counter({'pos': 240, 'neg': 144}),\n",
-       "  'Bernie': Counter({'neg': 103, 'pos': 91}),\n",
-       "  'Warren': Counter({'pos': 133, 'neg': 114}),\n",
-       "  'Kamala': Counter({'neg': 23, 'pos': 21})},\n",
-       " 'The Wall Street Journal': {'Biden': Counter({'pos': 26, 'neg': 17}),\n",
-       "  'Bernie': Counter({'pos': 8, 'neg': 2}),\n",
-       "  'Warren': Counter({'neg': 11, 'pos': 11}),\n",
-       "  'Kamala': Counter({'neg': 3, 'pos': 3})},\n",
-       " 'The Washington Post': {'Biden': Counter({'neg': 1142, 'pos': 1068}),\n",
-       "  'Bernie': Counter({'pos': 286, 'neg': 335}),\n",
-       "  'Warren': Counter({'neg': 513, 'pos': 407}),\n",
-       "  'Kamala': Counter({'neg': 170, 'pos': 147})}}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Biden': Counter(), 'Bernie': Counter(), 'Warren': Counter(), 'Kamala': Counter()}\n",
+      "{'Biden': Counter(), 'Bernie': Counter(), 'Warren': Counter(), 'Kamala': Counter()}\n",
+      "{'Biden': Counter({'neg': 519, 'pos': 504}), 'Bernie': Counter({'neg': 143, 'pos': 110}), 'Warren': Counter({'neg': 137, 'pos': 119}), 'Kamala': Counter({'neg': 70, 'pos': 67})}\n",
+      "{'Biden': Counter({'neg': 519, 'pos': 504}), 'Bernie': Counter({'neg': 143, 'pos': 110}), 'Warren': Counter({'neg': 137, 'pos': 119}), 'Kamala': Counter({'neg': 70, 'pos': 67})}\n",
+      "{'Biden': Counter({'neg': 532, 'pos': 446}), 'Bernie': Counter({'neg': 170, 'pos': 136}), 'Warren': Counter({'neg': 261, 'pos': 221}), 'Kamala': Counter({'neg': 81, 'pos': 62})}\n",
+      "{'Biden': Counter({'neg': 532, 'pos': 446}), 'Bernie': Counter({'neg': 170, 'pos': 136}), 'Warren': Counter({'neg': 261, 'pos': 221}), 'Kamala': Counter({'neg': 81, 'pos': 62})}\n",
+      "{'Biden': Counter({'pos': 809, 'neg': 797}), 'Bernie': Counter({'neg': 112, 'pos': 108}), 'Warren': Counter({'neg': 242, 'pos': 202}), 'Kamala': Counter({'neg': 116, 'pos': 100})}\n",
+      "{'Biden': Counter({'pos': 809, 'neg': 797}), 'Bernie': Counter({'neg': 112, 'pos': 108}), 'Warren': Counter({'neg': 242, 'pos': 202}), 'Kamala': Counter({'neg': 116, 'pos': 100})}\n",
+      "{'Biden': Counter({'neg': 10, 'pos': 7}), 'Bernie': Counter({'neg': 17, 'pos': 13}), 'Warren': Counter({'neg': 21, 'pos': 14}), 'Kamala': Counter({'pos': 4, 'neg': 1})}\n",
+      "{'Biden': Counter({'neg': 10, 'pos': 7}), 'Bernie': Counter({'neg': 17, 'pos': 13}), 'Warren': Counter({'neg': 21, 'pos': 14}), 'Kamala': Counter({'pos': 4, 'neg': 1})}\n",
+      "{'Biden': Counter({'pos': 88, 'neg': 84}), 'Bernie': Counter({'neg': 24, 'pos': 19}), 'Warren': Counter({'neg': 19, 'pos': 14}), 'Kamala': Counter({'pos': 9, 'neg': 5})}\n",
+      "{'Biden': Counter({'pos': 88, 'neg': 84}), 'Bernie': Counter({'neg': 24, 'pos': 19}), 'Warren': Counter({'neg': 19, 'pos': 14}), 'Kamala': Counter({'pos': 9, 'neg': 5})}\n",
+      "{'Biden': Counter({'neg': 260, 'pos': 220}), 'Bernie': Counter({'neg': 132, 'pos': 117}), 'Warren': Counter({'neg': 152, 'pos': 145}), 'Kamala': Counter({'neg': 38, 'pos': 25})}\n",
+      "{'Biden': Counter({'neg': 260, 'pos': 220}), 'Bernie': Counter({'neg': 132, 'pos': 117}), 'Warren': Counter({'neg': 152, 'pos': 145}), 'Kamala': Counter({'neg': 38, 'pos': 25})}\n",
+      "{'Biden': Counter({'pos': 205, 'neg': 128}), 'Bernie': Counter({'neg': 83, 'pos': 67}), 'Warren': Counter({'pos': 100, 'neg': 88}), 'Kamala': Counter({'neg': 19, 'pos': 15})}\n",
+      "{'Biden': Counter({'pos': 205, 'neg': 128}), 'Bernie': Counter({'neg': 83, 'pos': 67}), 'Warren': Counter({'pos': 100, 'neg': 88}), 'Kamala': Counter({'neg': 19, 'pos': 15})}\n",
+      "{'Biden': Counter({'pos': 23, 'neg': 17}), 'Bernie': Counter({'pos': 4, 'neg': 1}), 'Warren': Counter({'pos': 10, 'neg': 7}), 'Kamala': Counter({'neg': 3, 'pos': 2})}\n",
+      "{'Biden': Counter({'pos': 23, 'neg': 17}), 'Bernie': Counter({'pos': 4, 'neg': 1}), 'Warren': Counter({'pos': 10, 'neg': 7}), 'Kamala': Counter({'neg': 3, 'pos': 2})}\n",
+      "{'Biden': Counter({'neg': 1070, 'pos': 988}), 'Bernie': Counter({'neg': 253, 'pos': 201}), 'Warren': Counter({'neg': 423, 'pos': 303}), 'Kamala': Counter({'neg': 139, 'pos': 115})}\n",
+      "{'Biden': Counter({'neg': 1070, 'pos': 988}), 'Bernie': Counter({'neg': 253, 'pos': 201}), 'Warren': Counter({'neg': 423, 'pos': 303}), 'Kamala': Counter({'neg': 139, 'pos': 115})}\n"
+     ]
     }
    ],
    "source": [
-    "all_publishers"
+    "## smae as above block but with no_duplicates=1\n",
+    "all_publishers2 = {}\n",
+    "pubnames = [x for x in sources.keys()]\n",
+    "for i, publisher in enumerate(pubnames):\n",
+    "   # pubs.append(get_sentiment_scores(names_list,publisher))\n",
+    "    scores = get_sentiment_scores(names_list, publisher, 'tokenized_sents', 1)\n",
+    "    print(scores)\n",
+    "    all_publishers2[publisher] = scores"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "+ Extra code from previous project"
+    "## Need to look into this tokenizer, it should tokenize paragraphs but i couldn't install it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from estnltk import Tokenizer\n",
+    "# tokenizer = Tokenizer()\n",
+    "# document = tokenizer.tokenize(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extra code from previous project"
    ]
   },
   {
@@ -197,6 +240,7 @@
    "source": [
     "`\n",
     "sns.set_style(\"darkgrid\")\n",
+    "\n",
     "\n",
     "def name_entity_recognition(sentence):\n",
     "    '''\n",
@@ -216,6 +260,7 @@
     "\n",
     "    return name_entity\n",
     "\n",
+    "\n",
     "def flatten(l):\n",
     "    \"\"\"A function that flattens a complex list\"\"\"\n",
     "    flat_list = []\n",
@@ -223,6 +268,8 @@
     "        for j in i:\n",
     "            flat_list.append(j)\n",
     "    return flat_list\n",
+    "\n",
+    "\n",
     "def nlist(book):\n",
     "    \"\"\"Returns a unique list of names from a sentence tokenized book\"\"\"\n",
     "    names = []\n",
@@ -249,6 +296,8 @@
     "    name_frequency = list(name_frequency[0])\n",
     "\n",
     "    return name_frequency, names\n",
+    "\n",
+    "\n",
     "def name_freq_plot(df, title):\n",
     "    \"\"\"plot for name freq\"\"\"\n",
     "    sns.barplot(data=df,\n",
@@ -263,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Builds a dictionary which stores all the names used in all articles from CNN"
+    "## Builds a dictionary which stores all the names used in all articles from CNN via Spacy-NER"
    ]
   },
   {
@@ -272,14 +321,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## this will build a dictionary which stores all the names used in all articles from CNN\n",
-    "sources[\"CNN\"]['tokenized_sents'] = sources[\"CNN\"].apply(lambda row: nltk.sent_tokenize(row['full_art']), axis=1)\n",
-    "article_dict={}\n",
-    "for i,x in enumerate(sources[\"CNN\"]['tokenized_sents']):\n",
-    "    article_dict[i]=nlist(x)\n",
-    "    print(i)\n",
-    "    \n",
-    "    "
+    "# this will build a dictionary which stores all the names used in all articles from CNN\n",
+    "sources[\"CNN\"]['tokenized_sents'] = sources[\"CNN\"].apply(\n",
+    "    lambda row: nltk.sent_tokenize(row['full_art']), axis=1)\n",
+    "article_dict = {}\n",
+    "for i, x in enumerate(sources[\"CNN\"]['tokenized_sents']):\n",
+    "    article_dict[i] = nlist(x)\n",
+    "    print(i)"
    ]
   }
  ],
