--- a/barebones_scraper.ipynb
+++ b/barebones_scraper.ipynb
@@ -74,7 +74,7 @@
     "    my_df = pd.DataFrame(query[\"articles\"])\n",
     "    return my_df\n",
     "\n",
-    "def hit_api(start, end, q, myString2):\n",
+    "def hit_api(start, end, q, myStr):\n",
     "\n",
     "    # catch bug with formatted strings for dates\n",
     "    if end < 10:\n",
@@ -89,11 +89,11 @@
     "\n",
     "    # API query\n",
     "    all_articles = newsapi.get_everything(q=q,\n",
-    "                                          sources=myString2,\n",
+    "                                          sources=myStr,\n",
     "                                          language='en',\n",
-    "                                          from_param='2019-09-{}'.format(\n",
+    "                                          from_param='2019-10-{}'.format(\n",
     "                                              start_str),\n",
-    "                                          to='2019-09-{}'.format(end_str),\n",
+    "                                          to='2019-10-{}'.format(end_str),\n",
     "                                          sort_by='relevancy',\n",
     "                                          page_size=100,\n",
     "                                          page=1)\n",
@@ -153,158 +153,130 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "query will return: 3\n",
-      "query will return: 4\n",
-      "query will return: 4\n",
-      "query will return: 2\n",
-      "query will return: 3\n",
-      "query will return: 4\n",
-      "query will return: 4\n",
-      "query will return: 4\n",
-      "query will return: 48\n",
-      "we should expect: 76 articles\n",
-      "we have: 76 articles\n",
-      "0 results came into query that exceeded 100 hits in a day.\n",
-      "we have 62 unique links\n",
-      "we have duplciate shape df of: (14, 7) \n",
-      "75\n",
-      "74\n",
-      "73\n",
-      "72\n",
-      "71\n",
-      "70\n",
-      "69\n",
-      "68\n",
-      "67\n",
-      "66\n",
-      "65\n",
-      "64\n",
-      "63\n",
-      "62\n",
-      "61\n",
-      "60\n",
-      "59\n",
-      "58\n",
-      "57\n",
-      "56\n",
-      "55\n",
-      "54\n",
-      "53\n",
-      "52\n",
-      "51\n",
-      "50\n",
-      "49\n",
-      "48\n",
-      "47\n",
-      "46\n",
-      "45\n",
-      "44\n",
-      "43\n",
-      "42\n",
-      "41\n",
-      "40\n",
-      "39\n",
-      "38\n",
-      "37\n",
-      "36\n",
-      "35\n",
-      "34\n",
-      "33\n",
-      "32\n",
-      "31\n",
-      "30\n",
-      "29\n",
-      "28\n",
-      "27\n",
-      "26\n",
-      "25\n",
-      "24\n",
-      "23\n",
-      "22\n",
-      "21\n",
-      "20\n",
-      "19\n",
-      "18\n",
-      "17\n",
-      "16\n",
-      "15\n",
-      "14\n",
-      "13\n",
-      "12\n",
-      "11\n",
-      "10\n",
-      "9\n",
-      "8\n",
-      "7\n",
-      "6\n",
-      "5\n",
-      "4\n",
-      "3\n",
-      "2\n",
-      "1\n",
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "for x in range(22, 31):\n",
-    "    df = hit_api(x, x+1, 'Harris OR Kamala Harris', myString2)\n",
-    "\n",
-    "# collapse list on itself to build big df\n",
-    "Cand_df = pd.concat(df)\n",
-    "Cand_df = Cand_df.reset_index(drop=True)\n",
-    "error_checks()\n",
-    "\n",
-    "\n",
-    "headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.120 Safari/537.36'}\n",
-    "## Build counts as check on progress of loop. will count down Url left to hit\n",
-    "counts=Cand_df['url'].shape[0]\n",
-    "list_full_text=[]\n",
-    "for link in Cand_df['url']:\n",
-    "    counts-=1\n",
-    "    print(counts)\n",
-    "    html = requests.get(link,headers=headers).text\n",
-    "    try: text = fulltext(html)\n",
-    "    except: \n",
-    "        print(\"no words found\")\n",
-    "        text=\"no words found\"\n",
-    "        list_full_text.append(text)\n",
-    "        continue\n",
-    "    list_full_text.append(text)\n",
-    "Cand_df['full_art']=pd.Series(list_full_text)\n",
-    "Cand_df.to_csv('data_csvs/data1'+str(time.time())+'.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Scrape WAPO New York magazine\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "query will return: 12\n",
+      "query will return: 13\n",
+      "query will return: 12\n",
+      "query will return: 7\n",
+      "query will return: 6\n",
+      "query will return: 10\n",
+      "query will return: 14\n",
+      "query will return: 13\n",
+      "query will return: 10\n",
+      "query will return: 12\n",
       "query will return: 11\n",
-      "query will return: 18\n",
-      "query will return: 18\n",
-      "query will return: 11\n",
+      "query will return: 6\n",
+      "query will return: 6\n",
       "query will return: 16\n",
-      "query will return: 15\n",
-      "query will return: 4\n",
-      "query will return: 5\n",
-      "query will return: 143\n",
-      "we should expect: 317 articles\n",
-      "we have: 274 articles\n",
-      "43 results came into query that exceeded 100 hits in a day.\n",
-      "we have 212 unique links\n",
-      "we have duplciate shape df of: (62, 7) \n",
+      "query will return: 46\n",
+      "query will return: 45\n",
+      "query will return: 16\n",
+      "query will return: 9\n",
+      "query will return: 8\n",
+      "query will return: 10\n",
+      "query will return: 9\n",
+      "query will return: 7\n",
+      "query will return: 9\n",
+      "query will return: 12\n",
+      "query will return: 11\n",
+      "query will return: 7\n",
+      "query will return: 8\n",
+      "query will return: 9\n",
+      "query will return: 10\n",
+      "we should expect: 364 articles\n",
+      "we have: 364 articles\n",
+      "0 results came into query that exceeded 100 hits in a day.\n",
+      "we have 187 unique links\n",
+      "we have duplciate shape df of: (177, 7) \n",
+      "363\n",
+      "362\n",
+      "361\n",
+      "360\n",
+      "359\n",
+      "358\n",
+      "357\n",
+      "356\n",
+      "355\n",
+      "354\n",
+      "353\n",
+      "352\n",
+      "351\n",
+      "350\n",
+      "349\n",
+      "348\n",
+      "347\n",
+      "346\n",
+      "345\n",
+      "344\n",
+      "343\n",
+      "342\n",
+      "341\n",
+      "340\n",
+      "339\n",
+      "338\n",
+      "337\n",
+      "336\n",
+      "335\n",
+      "334\n",
+      "333\n",
+      "332\n",
+      "331\n",
+      "330\n",
+      "329\n",
+      "328\n",
+      "327\n",
+      "326\n",
+      "325\n",
+      "324\n",
+      "323\n",
+      "322\n",
+      "321\n",
+      "320\n",
+      "319\n",
+      "318\n",
+      "317\n",
+      "316\n",
+      "315\n",
+      "314\n",
+      "313\n",
+      "312\n",
+      "311\n",
+      "310\n",
+      "309\n",
+      "308\n",
+      "307\n",
+      "306\n",
+      "305\n",
+      "304\n",
+      "303\n",
+      "302\n",
+      "301\n",
+      "300\n",
+      "299\n",
+      "298\n",
+      "297\n",
+      "296\n",
+      "295\n",
+      "294\n",
+      "293\n",
+      "292\n",
+      "291\n",
+      "290\n",
+      "289\n",
+      "288\n",
+      "287\n",
+      "286\n",
+      "285\n",
+      "284\n",
+      "283\n",
+      "282\n",
+      "281\n",
+      "280\n",
+      "279\n",
+      "278\n",
+      "277\n",
+      "276\n",
+      "275\n",
+      "274\n",
       "273\n",
       "272\n",
       "271\n",
@@ -583,8 +555,93 @@
     }
    ],
    "source": [
-    "for x in range(22, 31):\n",
-    "    df = hit_api(x, x+1, 'Harris OR Kamala Harris', myString)\n",
+    "for x in range(1, 30):\n",
+    "    df = hit_api(x, x+1, 'Warren OR Elizabeth Warren', myString2)\n",
+    "\n",
+    "# collapse list on itself to build big df\n",
+    "Cand_df = pd.concat(df)\n",
+    "Cand_df = Cand_df.reset_index(drop=True)\n",
+    "error_checks()\n",
+    "\n",
+    "\n",
+    "headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.120 Safari/537.36'}\n",
+    "## Build counts as check on progress of loop. will count down Url left to hit\n",
+    "counts=Cand_df['url'].shape[0]\n",
+    "list_full_text=[]\n",
+    "for link in Cand_df['url']:\n",
+    "    counts-=1\n",
+    "    print(counts)\n",
+    "    html = requests.get(link,headers=headers).text\n",
+    "    try: text = fulltext(html)\n",
+    "    except: \n",
+    "        print(\"no words found\")\n",
+    "        text=\"no words found\"\n",
+    "        list_full_text.append(text)\n",
+    "        continue\n",
+    "    list_full_text.append(text)\n",
+    "Cand_df['full_art']=pd.Series(list_full_text)\n",
+    "Cand_df.to_csv('data_csvs/data1'+str(time.time())+'.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scrape WAPO New York magazine\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "query will return: 21\n",
+      "query will return: 34\n",
+      "query will return: 32\n",
+      "query will return: 13\n",
+      "query will return: 9\n",
+      "query will return: 12\n",
+      "query will return: 18\n",
+      "query will return: 26\n",
+      "query will return: 26\n",
+      "query will return: 20\n",
+      "query will return: 11\n",
+      "query will return: 6\n",
+      "query will return: 17\n",
+      "query will return: 32\n",
+      "query will return: 63\n",
+      "query will return: 57\n",
+      "query will return: 21\n",
+      "query will return: 15\n",
+      "query will return: 11\n",
+      "query will return: 26\n",
+      "query will return: 33\n",
+      "query will return: 24\n"
+     ]
+    },
+    {
+     "ename": "NewsAPIException",
+     "evalue": "{'status': 'error', 'code': 'rateLimited', 'message': 'You have made too many requests recently. Developer accounts are limited to 500 requests over a 24 hour period (250 requests available every 12 hours). Please upgrade to a paid plan if you need more requests.'}",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNewsAPIException\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-89e2ae224660>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m30\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhit_api\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Warren OR Elizabeth Warren'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmyString\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m# collapse list on itself to build big df\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-1-1122a59362fc>\u001b[0m in \u001b[0;36mhit_api\u001b[1;34m(start, end, q, myStr)\u001b[0m\n\u001b[0;32m     75\u001b[0m                                           \u001b[0msort_by\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'relevancy'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     76\u001b[0m                                           \u001b[0mpage_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 77\u001b[1;33m                                           page=1)\n\u001b[0m\u001b[0;32m     78\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     79\u001b[0m     \u001b[1;31m# get count\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mE:\\Anaconda\\lib\\site-packages\\newsapi\\newsapi_client.py\u001b[0m in \u001b[0;36mget_everything\u001b[1;34m(self, q, sources, domains, exclude_domains, from_param, to, language, sort_by, page, page_size)\u001b[0m\n\u001b[0;32m    259\u001b[0m         \u001b[1;31m# Check Status of Request\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    260\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstatus_code\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcodes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mok\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 261\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mNewsAPIException\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    262\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    263\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNewsAPIException\u001b[0m: {'status': 'error', 'code': 'rateLimited', 'message': 'You have made too many requests recently. Developer accounts are limited to 500 requests over a 24 hour period (250 requests available every 12 hours). Please upgrade to a paid plan if you need more requests.'}"
+     ]
+    }
+   ],
+   "source": [
+    "Cand_df=None\n",
+    "\n",
+    "for x in range(1, 30):\n",
+    "    df = hit_api(x, x+1, 'Warren OR Elizabeth Warren', myString)\n",
     "\n",
     "# collapse list on itself to build big df\n",
     "Cand_df = pd.concat(df)\n",
