--- a/code/naive_sent_analysis.ipynb
+++ b/code/naive_sent_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,33 +122,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Biden': Counter(), 'Bernie': Counter(), 'Warren': Counter(), 'Kamala': Counter()}\n",
-      "{'Biden': Counter(), 'Bernie': Counter(), 'Warren': Counter(), 'Kamala': Counter()}\n",
-      "{'Biden': Counter({'neg': 546, 'pos': 541}), 'Bernie': Counter({'neg': 176, 'pos': 142}), 'Warren': Counter({'pos': 165, 'neg': 163}), 'Kamala': Counter({'pos': 81, 'neg': 80})}\n",
-      "{'Biden': Counter({'neg': 546, 'pos': 541}), 'Bernie': Counter({'neg': 176, 'pos': 142}), 'Warren': Counter({'pos': 165, 'neg': 163}), 'Kamala': Counter({'pos': 81, 'neg': 80})}\n",
-      "{'Biden': Counter({'neg': 579, 'pos': 509}), 'Bernie': Counter({'neg': 208, 'pos': 180}), 'Warren': Counter({'neg': 318, 'pos': 300}), 'Kamala': Counter({'neg': 99, 'pos': 78})}\n",
-      "{'Biden': Counter({'neg': 579, 'pos': 509}), 'Bernie': Counter({'neg': 208, 'pos': 180}), 'Warren': Counter({'neg': 318, 'pos': 300}), 'Kamala': Counter({'neg': 99, 'pos': 78})}\n",
-      "{'Biden': Counter({'pos': 894, 'neg': 836}), 'Bernie': Counter({'pos': 165, 'neg': 163}), 'Warren': Counter({'neg': 308, 'pos': 292}), 'Kamala': Counter({'neg': 135, 'pos': 122})}\n",
-      "{'Biden': Counter({'pos': 894, 'neg': 836}), 'Bernie': Counter({'pos': 165, 'neg': 163}), 'Warren': Counter({'neg': 308, 'pos': 292}), 'Kamala': Counter({'neg': 135, 'pos': 122})}\n",
-      "{'Biden': Counter({'neg': 16, 'pos': 8}), 'Bernie': Counter({'neg': 24, 'pos': 17}), 'Warren': Counter({'neg': 31, 'pos': 17}), 'Kamala': Counter({'neg': 4, 'pos': 4})}\n",
-      "{'Biden': Counter({'neg': 16, 'pos': 8}), 'Bernie': Counter({'neg': 24, 'pos': 17}), 'Warren': Counter({'neg': 31, 'pos': 17}), 'Kamala': Counter({'neg': 4, 'pos': 4})}\n",
-      "{'Biden': Counter({'pos': 99, 'neg': 93}), 'Bernie': Counter({'neg': 31, 'pos': 27}), 'Warren': Counter({'neg': 31, 'pos': 22}), 'Kamala': Counter({'pos': 11, 'neg': 7})}\n",
-      "{'Biden': Counter({'pos': 99, 'neg': 93}), 'Bernie': Counter({'neg': 31, 'pos': 27}), 'Warren': Counter({'neg': 31, 'pos': 22}), 'Kamala': Counter({'pos': 11, 'neg': 7})}\n",
-      "{'Biden': Counter({'neg': 296, 'pos': 281}), 'Bernie': Counter({'pos': 174, 'neg': 167}), 'Warren': Counter({'pos': 217, 'neg': 202}), 'Kamala': Counter({'neg': 52, 'pos': 42})}\n",
-      "{'Biden': Counter({'neg': 296, 'pos': 281}), 'Bernie': Counter({'pos': 174, 'neg': 167}), 'Warren': Counter({'pos': 217, 'neg': 202}), 'Kamala': Counter({'neg': 52, 'pos': 42})}\n",
-      "{'Biden': Counter({'pos': 240, 'neg': 144}), 'Bernie': Counter({'neg': 103, 'pos': 91}), 'Warren': Counter({'pos': 133, 'neg': 114}), 'Kamala': Counter({'neg': 23, 'pos': 21})}\n",
-      "{'Biden': Counter({'pos': 240, 'neg': 144}), 'Bernie': Counter({'neg': 103, 'pos': 91}), 'Warren': Counter({'pos': 133, 'neg': 114}), 'Kamala': Counter({'neg': 23, 'pos': 21})}\n",
-      "{'Biden': Counter({'pos': 26, 'neg': 17}), 'Bernie': Counter({'pos': 8, 'neg': 2}), 'Warren': Counter({'neg': 11, 'pos': 11}), 'Kamala': Counter({'neg': 3, 'pos': 3})}\n",
-      "{'Biden': Counter({'pos': 26, 'neg': 17}), 'Bernie': Counter({'pos': 8, 'neg': 2}), 'Warren': Counter({'neg': 11, 'pos': 11}), 'Kamala': Counter({'neg': 3, 'pos': 3})}\n",
-      "{'Biden': Counter({'neg': 1142, 'pos': 1068}), 'Bernie': Counter({'neg': 335, 'pos': 286}), 'Warren': Counter({'neg': 513, 'pos': 407}), 'Kamala': Counter({'neg': 170, 'pos': 147})}\n",
-      "{'Biden': Counter({'neg': 1142, 'pos': 1068}), 'Bernie': Counter({'neg': 335, 'pos': 286}), 'Warren': Counter({'neg': 513, 'pos': 407}), 'Kamala': Counter({'neg': 170, 'pos': 147})}\n"
+      "{'Biden': Counter({'pos': 6, 'neg': 6}), 'Bernie': Counter({'neg': 5}), 'Warren': Counter({'neg': 7, 'pos': 6}), 'Kamala': Counter({'neg': 2})}\n",
+      "{'Biden': Counter({'neg': 1525, 'pos': 1473}), 'Bernie': Counter({'neg': 538, 'pos': 484}), 'Warren': Counter({'neg': 602, 'pos': 519}), 'Kamala': Counter({'pos': 216, 'neg': 205})}\n",
+      "{'Biden': Counter({'neg': 962, 'pos': 883}), 'Bernie': Counter({'neg': 306, 'pos': 276}), 'Warren': Counter({'neg': 434, 'pos': 387}), 'Kamala': Counter({'neg': 121, 'pos': 100})}\n",
+      "{'Biden': Counter({'pos': 2126, 'neg': 2044}), 'Bernie': Counter({'neg': 574, 'pos': 482}), 'Warren': Counter({'neg': 726, 'pos': 624}), 'Kamala': Counter({'neg': 244, 'pos': 193})}\n",
+      "{'Biden': Counter({'neg': 24, 'pos': 13}), 'Bernie': Counter({'neg': 30, 'pos': 20}), 'Warren': Counter({'neg': 41, 'pos': 20}), 'Kamala': Counter({'pos': 5, 'neg': 4})}\n",
+      "{'Biden': Counter({'pos': 119, 'neg': 113}), 'Bernie': Counter({'neg': 38, 'pos': 32}), 'Warren': Counter({'neg': 40, 'pos': 32}), 'Kamala': Counter({'pos': 14, 'neg': 8})}\n",
+      "{'Biden': Counter({'neg': 327, 'pos': 319}), 'Bernie': Counter({'neg': 184, 'pos': 182}), 'Warren': Counter({'pos': 227, 'neg': 222}), 'Kamala': Counter({'neg': 70, 'pos': 57})}\n",
+      "{'Biden': Counter({'pos': 286, 'neg': 217}), 'Bernie': Counter({'neg': 166, 'pos': 141}), 'Warren': Counter({'neg': 198, 'pos': 195}), 'Kamala': Counter({'neg': 34, 'pos': 33})}\n",
+      "{'Biden': Counter({'pos': 55, 'neg': 50}), 'Bernie': Counter({'pos': 19, 'neg': 6}), 'Warren': Counter({'pos': 36, 'neg': 34}), 'Kamala': Counter({'neg': 7, 'pos': 4})}\n",
+      "{'Biden': Counter({'neg': 1393, 'pos': 1326}), 'Bernie': Counter({'neg': 673, 'pos': 549}), 'Warren': Counter({'neg': 846, 'pos': 668}), 'Kamala': Counter({'neg': 308, 'pos': 227})}\n"
      ]
     }
    ],
@@ -166,33 +156,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Bloomberg': {'Biden': Counter({'pos': 6, 'neg': 6}),\n",
+       "  'Bernie': Counter({'neg': 5}),\n",
+       "  'Warren': Counter({'pos': 6, 'neg': 7}),\n",
+       "  'Kamala': Counter({'neg': 2})},\n",
+       " 'Breitbart News': {'Biden': Counter({'neg': 1525, 'pos': 1473}),\n",
+       "  'Bernie': Counter({'neg': 538, 'pos': 484}),\n",
+       "  'Warren': Counter({'neg': 602, 'pos': 519}),\n",
+       "  'Kamala': Counter({'pos': 216, 'neg': 205})},\n",
+       " 'CNN': {'Biden': Counter({'pos': 883, 'neg': 962}),\n",
+       "  'Bernie': Counter({'neg': 306, 'pos': 276}),\n",
+       "  'Warren': Counter({'pos': 387, 'neg': 434}),\n",
+       "  'Kamala': Counter({'neg': 121, 'pos': 100})},\n",
+       " 'Fox News': {'Biden': Counter({'neg': 2044, 'pos': 2126}),\n",
+       "  'Bernie': Counter({'pos': 482, 'neg': 574}),\n",
+       "  'Warren': Counter({'pos': 624, 'neg': 726}),\n",
+       "  'Kamala': Counter({'neg': 244, 'pos': 193})},\n",
+       " 'Google News': {'Biden': Counter({'pos': 13, 'neg': 24}),\n",
+       "  'Bernie': Counter({'neg': 30, 'pos': 20}),\n",
+       "  'Warren': Counter({'neg': 41, 'pos': 20}),\n",
+       "  'Kamala': Counter({'neg': 4, 'pos': 5})},\n",
+       " 'MSNBC': {'Biden': Counter({'pos': 119, 'neg': 113}),\n",
+       "  'Bernie': Counter({'pos': 32, 'neg': 38}),\n",
+       "  'Warren': Counter({'neg': 40, 'pos': 32}),\n",
+       "  'Kamala': Counter({'pos': 14, 'neg': 8})},\n",
+       " 'New York Magazine': {'Biden': Counter({'neg': 327, 'pos': 319}),\n",
+       "  'Bernie': Counter({'neg': 184, 'pos': 182}),\n",
+       "  'Warren': Counter({'neg': 222, 'pos': 227}),\n",
+       "  'Kamala': Counter({'neg': 70, 'pos': 57})},\n",
+       " 'The New York Times': {'Biden': Counter({'pos': 286, 'neg': 217}),\n",
+       "  'Bernie': Counter({'neg': 166, 'pos': 141}),\n",
+       "  'Warren': Counter({'pos': 195, 'neg': 198}),\n",
+       "  'Kamala': Counter({'neg': 34, 'pos': 33})},\n",
+       " 'The Wall Street Journal': {'Biden': Counter({'pos': 55, 'neg': 50}),\n",
+       "  'Bernie': Counter({'pos': 19, 'neg': 6}),\n",
+       "  'Warren': Counter({'neg': 34, 'pos': 36}),\n",
+       "  'Kamala': Counter({'neg': 7, 'pos': 4})},\n",
+       " 'The Washington Post': {'Biden': Counter({'neg': 1393, 'pos': 1326}),\n",
+       "  'Bernie': Counter({'pos': 549, 'neg': 673}),\n",
+       "  'Warren': Counter({'neg': 846, 'pos': 668}),\n",
+       "  'Kamala': Counter({'neg': 308, 'pos': 227})}}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_publishers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Biden': Counter(), 'Bernie': Counter(), 'Warren': Counter(), 'Kamala': Counter()}\n",
-      "{'Biden': Counter(), 'Bernie': Counter(), 'Warren': Counter(), 'Kamala': Counter()}\n",
-      "{'Biden': Counter({'neg': 519, 'pos': 504}), 'Bernie': Counter({'neg': 143, 'pos': 110}), 'Warren': Counter({'neg': 137, 'pos': 119}), 'Kamala': Counter({'neg': 70, 'pos': 67})}\n",
-      "{'Biden': Counter({'neg': 519, 'pos': 504}), 'Bernie': Counter({'neg': 143, 'pos': 110}), 'Warren': Counter({'neg': 137, 'pos': 119}), 'Kamala': Counter({'neg': 70, 'pos': 67})}\n",
-      "{'Biden': Counter({'neg': 532, 'pos': 446}), 'Bernie': Counter({'neg': 170, 'pos': 136}), 'Warren': Counter({'neg': 261, 'pos': 221}), 'Kamala': Counter({'neg': 81, 'pos': 62})}\n",
-      "{'Biden': Counter({'neg': 532, 'pos': 446}), 'Bernie': Counter({'neg': 170, 'pos': 136}), 'Warren': Counter({'neg': 261, 'pos': 221}), 'Kamala': Counter({'neg': 81, 'pos': 62})}\n",
-      "{'Biden': Counter({'pos': 809, 'neg': 797}), 'Bernie': Counter({'neg': 112, 'pos': 108}), 'Warren': Counter({'neg': 242, 'pos': 202}), 'Kamala': Counter({'neg': 116, 'pos': 100})}\n",
-      "{'Biden': Counter({'pos': 809, 'neg': 797}), 'Bernie': Counter({'neg': 112, 'pos': 108}), 'Warren': Counter({'neg': 242, 'pos': 202}), 'Kamala': Counter({'neg': 116, 'pos': 100})}\n",
-      "{'Biden': Counter({'neg': 10, 'pos': 7}), 'Bernie': Counter({'neg': 17, 'pos': 13}), 'Warren': Counter({'neg': 21, 'pos': 14}), 'Kamala': Counter({'pos': 4, 'neg': 1})}\n",
-      "{'Biden': Counter({'neg': 10, 'pos': 7}), 'Bernie': Counter({'neg': 17, 'pos': 13}), 'Warren': Counter({'neg': 21, 'pos': 14}), 'Kamala': Counter({'pos': 4, 'neg': 1})}\n",
-      "{'Biden': Counter({'pos': 88, 'neg': 84}), 'Bernie': Counter({'neg': 24, 'pos': 19}), 'Warren': Counter({'neg': 19, 'pos': 14}), 'Kamala': Counter({'pos': 9, 'neg': 5})}\n",
-      "{'Biden': Counter({'pos': 88, 'neg': 84}), 'Bernie': Counter({'neg': 24, 'pos': 19}), 'Warren': Counter({'neg': 19, 'pos': 14}), 'Kamala': Counter({'pos': 9, 'neg': 5})}\n",
-      "{'Biden': Counter({'neg': 260, 'pos': 220}), 'Bernie': Counter({'neg': 132, 'pos': 117}), 'Warren': Counter({'neg': 152, 'pos': 145}), 'Kamala': Counter({'neg': 38, 'pos': 25})}\n",
-      "{'Biden': Counter({'neg': 260, 'pos': 220}), 'Bernie': Counter({'neg': 132, 'pos': 117}), 'Warren': Counter({'neg': 152, 'pos': 145}), 'Kamala': Counter({'neg': 38, 'pos': 25})}\n",
-      "{'Biden': Counter({'pos': 205, 'neg': 128}), 'Bernie': Counter({'neg': 83, 'pos': 67}), 'Warren': Counter({'pos': 100, 'neg': 88}), 'Kamala': Counter({'neg': 19, 'pos': 15})}\n",
-      "{'Biden': Counter({'pos': 205, 'neg': 128}), 'Bernie': Counter({'neg': 83, 'pos': 67}), 'Warren': Counter({'pos': 100, 'neg': 88}), 'Kamala': Counter({'neg': 19, 'pos': 15})}\n",
-      "{'Biden': Counter({'pos': 23, 'neg': 17}), 'Bernie': Counter({'pos': 4, 'neg': 1}), 'Warren': Counter({'pos': 10, 'neg': 7}), 'Kamala': Counter({'neg': 3, 'pos': 2})}\n",
-      "{'Biden': Counter({'pos': 23, 'neg': 17}), 'Bernie': Counter({'pos': 4, 'neg': 1}), 'Warren': Counter({'pos': 10, 'neg': 7}), 'Kamala': Counter({'neg': 3, 'pos': 2})}\n",
-      "{'Biden': Counter({'neg': 1070, 'pos': 988}), 'Bernie': Counter({'neg': 253, 'pos': 201}), 'Warren': Counter({'neg': 423, 'pos': 303}), 'Kamala': Counter({'neg': 139, 'pos': 115})}\n",
-      "{'Biden': Counter({'neg': 1070, 'pos': 988}), 'Bernie': Counter({'neg': 253, 'pos': 201}), 'Warren': Counter({'neg': 423, 'pos': 303}), 'Kamala': Counter({'neg': 139, 'pos': 115})}\n"
+      "{'Biden': Counter({'neg': 4, 'pos': 3}), 'Bernie': Counter({'neg': 2}), 'Warren': Counter({'neg': 4, 'pos': 4}), 'Kamala': Counter({'neg': 1})}\n",
+      "{'Biden': Counter({'neg': 1428, 'pos': 1359}), 'Bernie': Counter({'neg': 440, 'pos': 388}), 'Warren': Counter({'neg': 494, 'pos': 383}), 'Kamala': Counter({'pos': 179, 'neg': 170})}\n",
+      "{'Biden': Counter({'neg': 896, 'pos': 799}), 'Bernie': Counter({'neg': 243, 'pos': 207}), 'Warren': Counter({'neg': 344, 'pos': 284}), 'Kamala': Counter({'neg': 98, 'pos': 80})}\n",
+      "{'Biden': Counter({'neg': 1958, 'pos': 1943}), 'Bernie': Counter({'neg': 458, 'pos': 349}), 'Warren': Counter({'neg': 578, 'pos': 430}), 'Kamala': Counter({'neg': 219, 'pos': 159})}\n",
+      "{'Biden': Counter({'neg': 16, 'pos': 12}), 'Bernie': Counter({'neg': 20, 'pos': 15}), 'Warren': Counter({'neg': 27, 'pos': 15}), 'Kamala': Counter({'pos': 5, 'neg': 1})}\n",
+      "{'Biden': Counter({'pos': 106, 'neg': 101}), 'Bernie': Counter({'neg': 28, 'pos': 24}), 'Warren': Counter({'neg': 26, 'pos': 19}), 'Kamala': Counter({'pos': 12, 'neg': 5})}\n",
+      "{'Biden': Counter({'neg': 285, 'pos': 253}), 'Bernie': Counter({'neg': 142, 'pos': 122}), 'Warren': Counter({'neg': 165, 'pos': 151}), 'Kamala': Counter({'neg': 54, 'pos': 36})}\n",
+      "{'Biden': Counter({'pos': 238, 'neg': 190}), 'Bernie': Counter({'neg': 134, 'pos': 106}), 'Warren': Counter({'neg': 157, 'pos': 144}), 'Kamala': Counter({'neg': 29, 'pos': 24})}\n",
+      "{'Biden': Counter({'neg': 48, 'pos': 47}), 'Bernie': Counter({'pos': 10, 'neg': 5}), 'Warren': Counter({'pos': 30, 'neg': 29}), 'Kamala': Counter({'neg': 7, 'pos': 2})}\n",
+      "{'Biden': Counter({'neg': 1281, 'pos': 1193}), 'Bernie': Counter({'neg': 533, 'pos': 406}), 'Warren': Counter({'neg': 685, 'pos': 499}), 'Kamala': Counter({'neg': 261, 'pos': 179})}\n"
      ]
     }
    ],
@@ -414,7 +453,7 @@
     "instance",
     "_Feature"
    ],
-   "window_display": true
+   "window_display": false
   }
  },
  "nbformat": 4,
