update master csv

--- a/code/naive_sent_analysis.ipynb
+++ b/code/naive_sent_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,23 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Biden': Counter({'pos': 6, 'neg': 6}), 'Bernie': Counter({'neg': 5}), 'Warren': Counter({'neg': 7, 'pos': 6}), 'Kamala': Counter({'neg': 2})}\n",
-      "{'Biden': Counter({'neg': 1525, 'pos': 1473}), 'Bernie': Counter({'neg': 538, 'pos': 484}), 'Warren': Counter({'neg': 602, 'pos': 519}), 'Kamala': Counter({'pos': 216, 'neg': 205})}\n",
-      "{'Biden': Counter({'neg': 962, 'pos': 883}), 'Bernie': Counter({'neg': 306, 'pos': 276}), 'Warren': Counter({'neg': 434, 'pos': 387}), 'Kamala': Counter({'neg': 121, 'pos': 100})}\n",
-      "{'Biden': Counter({'pos': 2126, 'neg': 2044}), 'Bernie': Counter({'neg': 574, 'pos': 482}), 'Warren': Counter({'neg': 726, 'pos': 624}), 'Kamala': Counter({'neg': 244, 'pos': 193})}\n",
-      "{'Biden': Counter({'neg': 24, 'pos': 13}), 'Bernie': Counter({'neg': 30, 'pos': 20}), 'Warren': Counter({'neg': 41, 'pos': 20}), 'Kamala': Counter({'pos': 5, 'neg': 4})}\n",
-      "{'Biden': Counter({'pos': 119, 'neg': 113}), 'Bernie': Counter({'neg': 38, 'pos': 32}), 'Warren': Counter({'neg': 40, 'pos': 32}), 'Kamala': Counter({'pos': 14, 'neg': 8})}\n",
-      "{'Biden': Counter({'neg': 327, 'pos': 319}), 'Bernie': Counter({'neg': 184, 'pos': 182}), 'Warren': Counter({'pos': 227, 'neg': 222}), 'Kamala': Counter({'neg': 70, 'pos': 57})}\n",
-      "{'Biden': Counter({'pos': 286, 'neg': 217}), 'Bernie': Counter({'neg': 166, 'pos': 141}), 'Warren': Counter({'neg': 198, 'pos': 195}), 'Kamala': Counter({'neg': 34, 'pos': 33})}\n",
-      "{'Biden': Counter({'pos': 55, 'neg': 50}), 'Bernie': Counter({'pos': 19, 'neg': 6}), 'Warren': Counter({'pos': 36, 'neg': 34}), 'Kamala': Counter({'neg': 7, 'pos': 4})}\n",
-      "{'Biden': Counter({'neg': 1393, 'pos': 1326}), 'Bernie': Counter({'neg': 673, 'pos': 549}), 'Warren': Counter({'neg': 846, 'pos': 668}), 'Kamala': Counter({'neg': 308, 'pos': 227})}\n"
+      "{'Biden': Counter({'pos': 6, 'neg': 6}), 'Bernie': Counter({'neg': 5}), 'Warren': Counter({'neg': 7, 'pos': 6}), 'Kamala': Counter({'neg': 2})}\n"
      ]
     }
    ],
