--- a/scrapers/barebones_scraper.ipynb
+++ b/scrapers/barebones_scraper.ipynb
@@ -23,7 +23,7 @@
     "import pandas as pd\n",
     "import os\n",
     "os.chdir('F:\\\\data620\\\\Data_698_Final')\n",
-    "import config\n",
+    "import config2\n",
     "import math\n",
     "import csv\n",
     "import sys\n",
@@ -33,7 +33,7 @@
     "from newspaper import fulltext\n",
     "import time\n",
     "# Hit Api with credentials\n",
-    "newsapi = NewsApiClient(api_key=config.api_key)\n",
+    "newsapi = NewsApiClient(api_key=config2.api_key)\n",
     "\n",
     "\n",
     "## global variables\n",
@@ -93,9 +93,9 @@
     "    all_articles = newsapi.get_everything(q=q,\n",
     "                                          sources=myStr,\n",
     "                                          language='en',\n",
-    "                                          from_param='2019-11-{}'.format(\n",
+    "                                          from_param='2019-12-{}'.format(\n",
     "                                              start_str),\n",
-    "                                          to='2019-11-{}'.format(end_str),\n",
+    "                                          to='2019-12-{}'.format(end_str),\n",
     "                                          sort_by='relevancy',\n",
     "                                          page_size=100,\n",
     "                                          page=1)\n",
@@ -156,32 +156,84 @@
      "output_type": "stream",
      "text": [
       "query will return: 5\n",
-      "query will return: 3\n",
-      "query will return: 4\n",
-      "query will return: 9\n",
-      "query will return: 11\n",
-      "query will return: 7\n",
-      "query will return: 7\n",
-      "query will return: 4\n"
-     ]
-    },
-    {
-     "ename": "NewsAPIException",
-     "evalue": "{'status': 'error', 'code': 'rateLimited', 'message': 'You have made too many requests recently. Developer accounts are limited to 500 requests over a 24 hour period (250 requests available every 12 hours). Please upgrade to a paid plan if you need more requests.'}",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNewsAPIException\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-786703337cb9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m30\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhit_api\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Sanders OR Bernie Sanders'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmyString2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# collapse list on itself to build big df\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mCand_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-1-771b49d2234f>\u001b[0m in \u001b[0;36mhit_api\u001b[1;34m(start, end, q, myStr)\u001b[0m\n\u001b[0;32m     77\u001b[0m                                           \u001b[0msort_by\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'relevancy'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     78\u001b[0m                                           \u001b[0mpage_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 79\u001b[1;33m                                           page=1)\n\u001b[0m\u001b[0;32m     80\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     81\u001b[0m     \u001b[1;31m# get count\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mE:\\Anaconda\\lib\\site-packages\\newsapi\\newsapi_client.py\u001b[0m in \u001b[0;36mget_everything\u001b[1;34m(self, q, sources, domains, exclude_domains, from_param, to, language, sort_by, page, page_size)\u001b[0m\n\u001b[0;32m    259\u001b[0m         \u001b[1;31m# Check Status of Request\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    260\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstatus_code\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcodes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mok\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 261\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mNewsAPIException\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    262\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    263\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNewsAPIException\u001b[0m: {'status': 'error', 'code': 'rateLimited', 'message': 'You have made too many requests recently. Developer accounts are limited to 500 requests over a 24 hour period (250 requests available every 12 hours). Please upgrade to a paid plan if you need more requests.'}"
+      "query will return: 8\n",
+      "query will return: 13\n",
+      "query will return: 19\n",
+      "query will return: 18\n",
+      "we should expect: 63 articles\n",
+      "we have: 63 articles\n",
+      "0 results came into query that exceeded 100 hits in a day.\n",
+      "we have 36 unique links\n",
+      "we have duplciate shape df of: (27, 7) \n",
+      "62\n",
+      "61\n",
+      "60\n",
+      "59\n",
+      "58\n",
+      "57\n",
+      "56\n",
+      "55\n",
+      "54\n",
+      "53\n",
+      "52\n",
+      "51\n",
+      "50\n",
+      "49\n",
+      "48\n",
+      "47\n",
+      "46\n",
+      "45\n",
+      "44\n",
+      "43\n",
+      "42\n",
+      "41\n",
+      "40\n",
+      "39\n",
+      "38\n",
+      "37\n",
+      "36\n",
+      "35\n",
+      "34\n",
+      "33\n",
+      "32\n",
+      "31\n",
+      "30\n",
+      "29\n",
+      "28\n",
+      "27\n",
+      "26\n",
+      "25\n",
+      "24\n",
+      "23\n",
+      "22\n",
+      "21\n",
+      "20\n",
+      "19\n",
+      "18\n",
+      "17\n",
+      "16\n",
+      "15\n",
+      "14\n",
+      "13\n",
+      "12\n",
+      "11\n",
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
      ]
     }
    ],
    "source": [
-    "for x in range(8, 30):\n",
-    "    df = hit_api(x, x+1, 'Sanders OR Bernie Sanders', myString2)\n",
+    "for x in range(1, 6):\n",
+    "    df = hit_api(x, x+1, 'Biden OR Joe Biden', myString2)\n",
     "\n",
     "# collapse list on itself to build big df\n",
     "Cand_df = pd.concat(df)\n",
@@ -217,14 +269,324 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "query will return: 23\n",
+      "query will return: 46\n",
+      "query will return: 55\n",
+      "query will return: 53\n",
+      "query will return: 53\n",
+      "we should expect: 293 articles\n",
+      "we have: 293 articles\n",
+      "0 results came into query that exceeded 100 hits in a day.\n",
+      "we have 167 unique links\n",
+      "we have duplciate shape df of: (126, 7) \n",
+      "292\n",
+      "291\n",
+      "290\n",
+      "289\n",
+      "288\n",
+      "287\n",
+      "286\n",
+      "285\n",
+      "284\n",
+      "283\n",
+      "282\n",
+      "281\n",
+      "280\n",
+      "279\n",
+      "278\n",
+      "277\n",
+      "276\n",
+      "275\n",
+      "274\n",
+      "273\n",
+      "272\n",
+      "271\n",
+      "270\n",
+      "269\n",
+      "268\n",
+      "267\n",
+      "266\n",
+      "265\n",
+      "264\n",
+      "263\n",
+      "262\n",
+      "261\n",
+      "260\n",
+      "259\n",
+      "258\n",
+      "257\n",
+      "256\n",
+      "255\n",
+      "254\n",
+      "253\n",
+      "252\n",
+      "251\n",
+      "250\n",
+      "249\n",
+      "248\n",
+      "247\n",
+      "246\n",
+      "245\n",
+      "244\n",
+      "243\n",
+      "242\n",
+      "241\n",
+      "240\n",
+      "239\n",
+      "238\n",
+      "237\n",
+      "236\n",
+      "235\n",
+      "234\n",
+      "233\n",
+      "232\n",
+      "231\n",
+      "230\n",
+      "229\n",
+      "228\n",
+      "227\n",
+      "226\n",
+      "225\n",
+      "224\n",
+      "223\n",
+      "222\n",
+      "221\n",
+      "220\n",
+      "219\n",
+      "218\n",
+      "217\n",
+      "216\n",
+      "215\n",
+      "214\n",
+      "213\n",
+      "212\n",
+      "211\n",
+      "210\n",
+      "209\n",
+      "208\n",
+      "207\n",
+      "206\n",
+      "205\n",
+      "204\n",
+      "203\n",
+      "202\n",
+      "201\n",
+      "200\n",
+      "199\n",
+      "198\n",
+      "197\n",
+      "196\n",
+      "195\n",
+      "194\n",
+      "193\n",
+      "192\n",
+      "191\n",
+      "190\n",
+      "189\n",
+      "188\n",
+      "187\n",
+      "186\n",
+      "185\n",
+      "184\n",
+      "183\n",
+      "182\n",
+      "181\n",
+      "180\n",
+      "179\n",
+      "178\n",
+      "177\n",
+      "176\n",
+      "175\n",
+      "174\n",
+      "173\n",
+      "172\n",
+      "171\n",
+      "170\n",
+      "169\n",
+      "168\n",
+      "167\n",
+      "166\n",
+      "165\n",
+      "164\n",
+      "163\n",
+      "162\n",
+      "161\n",
+      "160\n",
+      "159\n",
+      "158\n",
+      "157\n",
+      "156\n",
+      "155\n",
+      "154\n",
+      "153\n",
+      "152\n",
+      "151\n",
+      "150\n",
+      "149\n",
+      "148\n",
+      "147\n",
+      "146\n",
+      "145\n",
+      "144\n",
+      "143\n",
+      "142\n",
+      "141\n",
+      "140\n",
+      "139\n",
+      "138\n",
+      "137\n",
+      "136\n",
+      "135\n",
+      "134\n",
+      "133\n",
+      "132\n",
+      "131\n",
+      "130\n",
+      "129\n",
+      "128\n",
+      "127\n",
+      "126\n",
+      "125\n",
+      "124\n",
+      "123\n",
+      "122\n",
+      "121\n",
+      "120\n",
+      "119\n",
+      "118\n",
+      "117\n",
+      "116\n",
+      "115\n",
+      "114\n",
+      "113\n",
+      "112\n",
+      "111\n",
+      "110\n",
+      "109\n",
+      "108\n",
+      "107\n",
+      "106\n",
+      "105\n",
+      "104\n",
+      "103\n",
+      "102\n",
+      "101\n",
+      "100\n",
+      "99\n",
+      "98\n",
+      "97\n",
+      "96\n",
+      "95\n",
+      "94\n",
+      "93\n",
+      "92\n",
+      "91\n",
+      "90\n",
+      "89\n",
+      "88\n",
+      "87\n",
+      "86\n",
+      "85\n",
+      "84\n",
+      "83\n",
+      "82\n",
+      "81\n",
+      "80\n",
+      "79\n",
+      "78\n",
+      "77\n",
+      "76\n",
+      "75\n",
+      "74\n",
+      "73\n",
+      "72\n",
+      "71\n",
+      "70\n",
+      "69\n",
+      "68\n",
+      "67\n",
+      "66\n",
+      "65\n",
+      "64\n",
+      "63\n",
+      "62\n",
+      "61\n",
+      "60\n",
+      "59\n",
+      "58\n",
+      "57\n",
+      "56\n",
+      "55\n",
+      "54\n",
+      "53\n",
+      "52\n",
+      "51\n",
+      "50\n",
+      "49\n",
+      "48\n",
+      "47\n",
+      "46\n",
+      "45\n",
+      "44\n",
+      "43\n",
+      "42\n",
+      "41\n",
+      "40\n",
+      "39\n",
+      "38\n",
+      "37\n",
+      "36\n",
+      "35\n",
+      "34\n",
+      "33\n",
+      "32\n",
+      "31\n",
+      "30\n",
+      "29\n",
+      "28\n",
+      "27\n",
+      "26\n",
+      "25\n",
+      "24\n",
+      "23\n",
+      "22\n",
+      "21\n",
+      "20\n",
+      "19\n",
+      "18\n",
+      "17\n",
+      "16\n",
+      "15\n",
+      "14\n",
+      "13\n",
+      "12\n",
+      "11\n",
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "Cand_df=None\n",
     "\n",
-    "for x in range(8, 30):\n",
-    "    df = hit_api(x, x+1, 'Sanders OR Bernie Sanders', myString)\n",
+    "for x in range(1, 6):\n",
+    "    df = hit_api(x, x+1, 'Biden OR Joe Biden', myString)\n",
     "\n",
     "# collapse list on itself to build big df\n",
     "Cand_df = pd.concat(df)\n",
